@@ -203,7 +203,7 @@ char *queue_to_string(vanessa_queue_t *q){
     return(NULL);
   }
 
-  while(vanessa_queue_pop(q, (void **)&t)==NULL) {
+  while(vanessa_queue_pop(q, (void **)&t)!=NULL) {
     length+=1+t->n;
 
     if((stack=vanessa_queue_push(stack, (void *)t))==NULL){
@@ -221,7 +221,7 @@ char *queue_to_string(vanessa_queue_t *q){
   }
 
   pos = string;
-  while(vanessa_queue_pop(stack, (void **)&t)==NULL){
+  while(vanessa_queue_pop(stack, (void **)&t)!=NULL){
     if (t->n>0 && t->buf!=NULL){
       strncpy(pos, t->buf, t->n);
       pos+=t->n;
